# huggingface-agents-course-workbook

./: .gitignore  README.md  pyproject.toml
2_smolagents/: agent_with_logging.py  multi-agent.py
first_agent/: app.py
